gcp/040-nuget-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: baget-service
  namespace: baget
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app: baget-server
  type: NodePort
